; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/arm/extr_main.c_chacha20_test.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/arm/extr_main.c_chacha20_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @chacha20_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @chacha20_test() #0 {
  %1 = alloca [32 x i32], align 16
  %2 = alloca [8 x i32], align 16
  %3 = alloca [64 x i32], align 16
  %4 = alloca [64 x i32], align 16
  %5 = alloca i32, align 4
  %6 = bitcast [32 x i32]* %1 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %6, i8 0, i64 128, i1 false)
  %7 = bitcast [8 x i32]* %2 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %7, i8 0, i64 32, i1 false)
  %8 = bitcast [64 x i32]* %3 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %8, i8 0, i64 256, i1 false)
  %9 = bitcast [64 x i32]* %4 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %9, i8 0, i64 256, i1 false)
  %10 = getelementptr inbounds [32 x i32], [32 x i32]* %1, i64 0, i64 0
  %11 = getelementptr inbounds [8 x i32], [8 x i32]* %2, i64 0, i64 0
  %12 = call i32 @cf_chacha20_init(i32* %5, i32* %10, i32 128, i32* %11)
  %13 = getelementptr inbounds [64 x i32], [64 x i32]* %3, i64 0, i64 0
  %14 = getelementptr inbounds [64 x i32], [64 x i32]* %4, i64 0, i64 0
  %15 = call i32 @cf_chacha20_cipher(i32* %5, i32* %13, i32* %14, i32 256)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @cf_chacha20_init(i32*, i32*, i32, i32*) #2

declare dso_local i32 @cf_chacha20_cipher(i32*, i32*, i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
